# Qwen-VL

./: README.md  example.md  example.py  inference.py  pyproject.toml
docs/: datasets.md
qwen/: __init__.py  inference.py  main.py  model.py  train.py  transformer.py
